# jenkins-pipelines

./: .gitignore  AGENTS.md  Jenkinsfile  README.md  README_AWS_TERRAFORM.md  fb-mysql-5.6.groovy  justfile  pmm-ami.groovy  pmm-dashboards-package.groovy  pmm-docker.groovy  pmm-manage-package.groovy  pmm-ovf.groovy  pmm-qan-api-package.groovy  pmm-qan-app-package.groovy  pmm-server-package.groovy  pmm-server-packages.groovy  pmm-server-release.groovy  pmm-staging-start.groovy  pmm-staging-stop.groovy  pmm-testsuite.groovy  pmm-update-package.groovy  testcycle.json
.github/: CODEOWNERS
IaC/: AGENTS.md  BackupBucket.yml  CiPerconaComDns.yml  DocsBucket.yml  JenkinsArtifactory.yml  JenkinsArtifactoryAndSpawnIAM.yml  JenkinsArtifactoryIAM.yml  JenkinsImagesECR.yml  JenkinsStack.yml  LambdaEC2Cleanup.yml  LambdaVolumeCleanup.yml  NewtJenkinsStack.yml  PSJenkinsStack.yml  PerconaOpenShiftIAM.yml  PmmRdsStack.yml  RemoveUntaggedEc2Stack.yml  SpotTerminationReport.yml  StagingReminder.yml  StagingStack.yml  disconnect-spot-instances.yml  find-ami.sh  find-sg.sh  gen-doc.sh  justfile  reconnect-workers.yml  report-uptime.yml  spot-price-auto-updater.yml
cloud/: AGENTS.md
dagger/: README.md  dagger.json  justfile  main.py  pyproject.toml
docker/: docker_builder.sh  percona-docker.groovy
images/: image-configurator-package.groovy
misc/: active-choice-demo-normal.groovy  active-choice-demo-normal.yml  active-choice-demo.groovy  active-choice-demo.yml  ec2-instance-checks.groovy  ec2-instance-checks.yml  ps-test-mtr-fetcher.groovy  ps-test-mtr-fetcher.yml
pbm/: AGENTS.md  (+58 more)
(+2309 files in other folders)
